3/30/12 add point tool
3/30/12 convert line model to double precision, to support continuous dragging
3/30/12 handle cases where rise or run is zero
3/30/12 change "Graph Lines" check box to "Lines"
3/30/12 add rise and run brackets, wire up to check boxes
3/30/12 for development, allow all values to range (-10,+10)
3/30/12 add horizontal bracket for displaying run
3/30/12 highlight saved lines on mouseOver
3/30/12 hide manipulators when interactive line is not visible
3/29/12 added manipulators for slope and intercept (no drag handlers yet)
3/29/12 create specialization of graph that deals with direct manipulation and interactivity
3/29/12 add show/hide button for slope-intercept equation
3/29/12 color coding for slope and intercept
3/28/12 move Save Lines button into equation control panel
3/28/12 extend lines a bit beyond the bounds of the grid
3/28/12 create LGColors
3/28/12 constrain lines to the range of the graph
3/28/12 quick-and-dirty implementation of equation using Swing spinners
3/28/12 disable "Save Line" button until the line has been changed
3/28/12 add intermediate nodes to maintain rendering order for interactive, standard and saved lines
3/28/12 add interactive line to graph
3/28/12 wire up Save Line and Erase Lines buttons
3/28/12 disable check boxes for standard lines when "Graph lines" is unchecked
3/28/12 wire up "Graph lines" check box
3/28/12 make SlopeInterceptLine immutable
3/28/12 add standard lines and wire up to visibility controls
3/28/12 add support for different color and stroke for major grid lines
3/28/12 add major and minor ticks to graph
3/28/12 add axes (no ticks yet)
3/28/12 move origin of graph view to (0,0)
3/28/12 intermediate progress on line model, graph model, graph view
3/27/12 split up controls for saving and erasing lines, since they are unlikely to be co-located
3/27/12 migrate PropertyCheckBoxWithIcon to phetcommon
3/27/12 add placeholders for icons in "Show" control panel